# crypscan

./: .gitignore  Cargo.toml  IMPROVEMENTS.md  README.md  cbom.json  cbom.xml  cryptoscan
src/: config.rs  config_enhanced.rs  error.rs  lib.rs  main.rs  server.rs
src/cbom/: mod.rs
src/scanner/: artefacts.rs  code.rs  mod.rs  secrets.rs
src/utils/: file_utils.rs  lang_ident.rs  mod.rs  report.rs
tests/: integration_tests.rs
web/: details.html  index.html
web/css/: styles.css
web/js/: dashboard.js  dashboard_clean.js  theme.js
