[package]
name = "cryptoscan"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2.4.0"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
pcap = "1.1"
log = "0.4"
env_logger = "0.10"
rayon = "1.8"
infer = "0.15"
indicatif = "0.17"
