[package]
name = "cryptoscan"
version = "0.1.0"
edition = "2021"

[features]
default = []
server = ["tokio", "warp"]

[dependencies]
walkdir = "2.4.0"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
pcap = "1.1"
log = "0.4"
env_logger = "0.10"
rayon = "1.8"
infer = "0.15"
indicatif = "0.17"
lazy_static = "1.4"

# CBOM dependencies
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }

# Server dependencies (optional)
tokio = { version = "1.0", features = ["full"], optional = true }
warp = { version = "0.3", optional = true }

[dev-dependencies]
tempfile = "3.8"
